--- a/ClientApp/index.html
+++ b/ClientApp/index.html
@@ -8,7 +8,7 @@
             href="https://cdn.jsdelivr.net/npm/remixicon/fonts/remixicon.css"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>clientapp</title>
+    <title>Forms App</title>
 </head>
 <body>
 <div id="app"></div>
